Turn UserPreferences into a record
This is a pure DTO, turn it into a record.

Change-Id: I413d6ae35d498f98774e3570588c777a5b605519
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>